--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
   },
   "dependencies": {
     "core-js": "2.4.1",
-    "d3": "4.13.0",
+    "d3-array": "1.2.1",
+    "d3-axis": "1.0.8",
     "d3-fetch": "1.1.0",
+    "d3-scale": "2.0.0",
     "d3-selection": "1.3.0",
+    "d3-transition": "1.1.1",
     "riot": "^2.6.1"
   }
 }
