--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "core-js": "2.4.1",
     "d3-array": "1.2.1",
     "d3-axis": "1.0.8",
+    "d3-ease": "1.0.3",
     "d3-fetch": "1.1.0",
     "d3-scale": "2.0.0",
     "d3-selection": "1.3.0",
