--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "d3-axis": "1.0.8",
     "d3-ease": "1.0.3",
     "d3-fetch": "1.1.0",
+    "d3-queue": "3.0.7",
     "d3-scale": "2.0.0",
     "d3-selection": "1.3.0",
     "d3-transition": "1.1.1",
