--- a/package.json
+++ b/package.json
@@ -47,15 +47,17 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "core-js": "2.4.1",
-    "d3-array": "1.2.1",
-    "d3-axis": "1.0.8",
-    "d3-ease": "1.0.3",
-    "d3-fetch": "1.1.0",
-    "d3-queue": "3.0.7",
-    "d3-scale": "2.0.0",
-    "d3-selection": "1.3.0",
-    "d3-transition": "1.1.1",
-    "riot": "^2.6.1"
+    "core-js": "^2.4.1",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-ease": "^1.0.3",
+    "d3-fetch": "^1.1.0",
+    "d3-format": "^1.2.2",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
+    "d3-transition": "^1.1.1",
+    "intersection-observer": "^0.5.0",
+    "riot": "^3.9.0",
+    "scrollama": "1.4.1"
   }
 }
