--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   },
   "homepage": "https://github.com/felixmichel/metro_m2_interactive#readme",
   "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-eslint": "^7.1.1",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
     "babel-loader": "^6.2.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-es2015-riot": "^1.1.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.10.2",
+    "css-loader": "0.28.11",
+    "eslint": "4.19.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-promise": "3.7.0",
     "eslint-plugin-riot": "^0.1.6",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.17.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
+    "node-sass": "4.9.0",
     "riotjs-loader": "^3.0.0",
     "sass-loader": "^3.2.0",
     "sass-mq": "^3.3.1",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "1.0.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
-    "core-js": "^2.4.1",
+    "core-js": "2.5.6",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-ease": "^1.0.3",
@@ -55,8 +55,9 @@
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
     "d3-transition": "^1.1.1",
+    "hoek": "5.0.3",
     "intersection-observer": "^0.5.0",
-    "riot": "^3.9.0",
+    "riot": "3.10.0",
     "scrollama": "1.4.1"
   }
 }
